--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ h1 {
 }
 
 @media screen and (max-width: 450px){ /*A51 A71*/
-    .rest , .heart {
+    .rest , .heart , .heart2 {
         display: none;
     }
 
